
cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

project(cpp_programming)

add_executable(pointer pointer.cc)
add_executable(pointer2 pointer2.cc)
add_executable(pointer3 pointer3.cc)
add_executable(pointer_arr pointer_arr.cc)
add_executable(pointer_const pointer_const.cc)
add_executable(pointer_multiarr pointer_multiarr.cc)
add_executable(pointer_ctrl pointer_ctrl.cc)
add_executable(linear_search linear_search.cc)
